# mnist-mlops-project

./: .env.example  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
config/: base.yaml
infrastructure/aws/cloudformation/: template.yaml 
infrastructure/docker/: Dockerfile  Dockerfile.streamlit
notebooks/experimental/: mnist_experimentation.ipynb
pipelines/: training_pipeline.py
scripts/: deploy_aws.sh  run_training.sh  setup_environment.sh  start_api.sh
src/data/: data_loader.py  data_preprocessor.py
src/mlflow_pipeline/: registry.py  tracking.py
src/monitoring/: data_drift.py  data_validator.py
src/serving/: streamlit_app.py
src/serving/api/: main.py
src/training/: trainer.py
src/utils/: config.py
tests/integration/: test_pipeline.py
