[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for MNIST classification"
requires-python = ">=3.8"
dependencies = [
    "tensorflow>=2.13.0",
    "mlflow>=2.8.0",
    "fastapi>=0.100.0",
]